# Data.Triplets

./: .gitignore  CharacterHelpers.cs  Link.Debug.cs  Link.cs  Net.cs  NumberHelpers.cs  Platform.Data.Triplets.csproj  Platform.Data.Triplets.sln  README.html  README.md  index.html  index.json  manifest.json  toc.html  triplets.nimble  xrefmap.yml
Platform.Data.Triplets/: GexfExporter.cs  ILink.cs  Link.Debug.cs  Link.cs  Net.cs  NumberHelpers.cs  Platform.Data.Triplets.csproj
Platform.Data.Triplets.Tests/: LinkTests.cs  PersistentMemoryManagerTests.cs  Platform.Data.Triplets.Tests.csproj
Sequences/: SequenceHelpers.cs
api/: Platform.Data.Triplets.CharacterHelpers.CharacterMapping.html  Platform.Data.Triplets.CharacterHelpers.html  Platform.Data.Triplets.GexfExporter.html  Platform.Data.Triplets.Link.CreatedDelegate.html  Platform.Data.Triplets.Link.DeletedDelegate.html  Platform.Data.Triplets.Link.UpdatedDelegate.html  Platform.Data.Triplets.Link.html  Platform.Data.Triplets.LinkConverter.html  Platform.Data.Triplets.LinkDefinition.html  Platform.Data.Triplets.LinkExtensions.html  Platform.Data.Triplets.Net.html  Platform.Data.Triplets.NetMapping.html  Platform.Data.Triplets.NumberHelpers.html  Platform.Data.Triplets.Sequences.SequenceHelpers.html  Platform.Data.Triplets.Sequences.html  Platform.Data.Triplets.Tests.LinkTests.html  Platform.Data.Triplets.Tests.PersistentMemoryManagerTests.html  toc.html  (+2 more)
rust/triplets/: Cargo.toml
rust/triplets/src/: doublets.rs  lib.rs
rust/triplets/src/data/: error.rs  handler.rs  link.rs  mod.rs  traits.rs  triplet.rs
(+67 files in other folders)
